--- a/public/css/guest.css
+++ b/public/css/guest.css
@@ -45,6 +45,9 @@ body {
 .jumbotron {
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
+    /* background-image: url('/images/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
 .jumbotron .btn {
     padding: 14px 24px;
