--- a/public/css/guest.css
+++ b/public/css/guest.css
@@ -52,8 +52,9 @@ body {
     background-position: center;
 }
 .jumbotron .btn {
-    padding: 14px 24px;
-    font-size: 21px;
+    /* padding: 14px 24px; */
+    font-size: 14px;
+    padding: 10px 20px;
 }
 
 /* Supporting marketing content */
